# wtr-pop-rr-2025

./: .env.dev.example  README.md  install_dependencies.sh  main.py  pyproject.toml
containerlab/: wtr.yml
exercicio_napalm/: exercicio17_get_facts_arista.py  exercicio18_get_interfaces_arista.py  exercicio19_get_arp_arista.py  exercicio20_get_environment_arista.py  get_arp_arista.py  get_environment_arista.py  get_facts_arista.py  get_interfaces_arista.py
exercicio_netbox/: exercicio7_device_restapi.py  exercicio8_device_interface_restapi.py  exercicio9_device_graphql.py  get_data_device_graphql.py  get_data_device_restapi.py  get_data_interface_restapi.py  populate_netbox.py
exercicio_netconf/: exercicio22_get_capabilities.py  exercicio23_get_runningconfig_json.py  exercicio23_get_runningconfig_xml.py  exercicio24_get_runningconfig_filter.py  exercicio24_get_runningconfig_json.py  exercicio25_get_runningconfig_filter.py  exercicio25_get_runningconfig_filter_json.py  exercicio26_edit_config.py  exercicio26_get_runningconfig_filter_json.py  exercicio27_get_runningconfig_xml.py
exercicio_netmiko/: exercicio10_send_command.py  exercicio11_send_command_textfsm.py  exercicio12_send_command_iface_textfsm.py  exercicio13_send_config_set_iface.py  exercicio14_send_config_set_vlan.py  exercicio15_send_command_backup.py  exercicio16_send_command_backup_netbox.py  leaf-01.cfg  leaf-02.cfg  leaf-03.cfg  send_command.py  send_command_backup.py  send_command_backup_netbox.py  send_command_iface_textfsm.py  send_command_textfsm.py  send_config_set_iface.py  spine-01.cfg  (+2 more)
(+60 files in other folders)
